--- a/style.css
+++ b/style.css
@@ -102,3 +102,458 @@ nav .logo img{
     display: inline-block;
     
 }
+
+.tour-sec{
+    display: flex;
+    width: 80%;
+    margin: 80px 0 0 10%;
+    
+}
+.tour-text h1{
+   font-size: 40px;
+}
+.tour-text p{
+    color: #5A5A5D;
+    max-width: 600px;
+    margin-bottom: 30px;
+    
+}
+.tour-text ul{
+    max-width: 500px;
+    margin-left: 0;
+    
+}
+.tour-text ul li {
+    color: #5A5A5D;
+    margin-bottom: 20px;
+}
+.read-button{
+    height: 40px;
+   width: 130px;
+   background-color: #FF5400;
+   color: white;
+   border: none;
+   border-radius: 5px;
+}
+.tour-img img{
+    margin-left: 50px;
+}
+
+/* destination section staarts from here */
+
+.destination{
+  
+}
+.destination h1{
+    font-size: 40px;
+    margin-bottom: 0;
+    margin-top: 50px;
+    text-align: center;
+}
+.destination p{
+    text-align: center;
+    color: #5A5A5D;
+    margin-bottom: 50px;
+}
+.images{
+    height: 300px;
+    width: 200px;
+    /* border: 1px solid #FF5400; */
+}
+.des-img{
+    width: 80%;
+    margin: 0 0 0 10%;
+    /* border: 1px solid steelblue; */
+   
+}
+ .first-des-sec, .second-des-sec, .third-des-sec{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+ }
+
+ #box1{
+    width: 50%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 5.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+ }
+ #box2{
+    width: 50%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 8.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+ }
+
+ #box3{
+    width: 30%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 6.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+ }
+ #box4{
+    width: 45%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 7.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+ }
+ #box5{
+    width: 25%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 9.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+ }
+
+ #box6{
+    width: 45%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 11.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+ }
+ #box7{
+    width: 55%;
+    background-image: url(/Hero-travel/Images/Rectangle\ 10.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+ }
+ #box1 h2, #box2 h2, #box3 h2, #box4 h2, #box5 h2, #box6 h2, #box7 h2{
+    color: white;
+   text-align: center;
+   margin-top: 150px;
+ }
+/* destination section ends here */
+
+.service{
+    width: 80%;
+    margin: 100px 0 0 10%;
+}
+.service h1{
+    text-align: center;
+    font-size: 40px;
+}
+.service p{
+    text-align: center;
+    color: #5A5A5D;
+    margin-top: 0;
+}
+.content1-ser, .content2-ser, .content3-ser{
+    /* border: 1px solid peru; */
+    height: 400px;
+    padding: 80px 100px 0 100px;
+   
+}
+.content-container{
+    display: flex;
+    gap: 20px;
+    margin-top: 50px;
+}
+.content1-ser{
+    width: 50%;
+    background-color: rgba(281, 181, 99, 10%);
+    border: 1px solid rgba(281, 181, 99, 20%);
+    border-radius: 10px;
+    
+}
+.content2-ser{
+    width: 50%;
+    background-color: rgba(41, 206, 246, 10%);
+    border: 1px solid rgba(41, 206, 246, 20%);
+    border-radius: 10px;
+}
+.content2-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.content3-ser{
+    width: 50%;
+    background-color: rgba(233, 68, 68, 10%);
+     border: 1px solid rgba(233, 68, 68, 20%);
+    border-radius: 10px;
+}
+.content1-ser img{
+    height: 70px;
+}
+
+.content1-ser h6, .content2-ser h6, .content3-ser h6{
+    font-size: 16px;
+    font-weight: 300;
+    color: #5A5A5D;
+    margin-top: 0;
+}
+
+/* deals and discount styles start */
+
+.discount{
+    margin: 100px 0 0 0;
+}
+.discount h1{
+    font-size: 40px;
+    text-align: center;
+    
+}
+.discount p{
+    text-align: center;
+    margin-top: 0;
+    color: #5A5A5D;
+}
+.images1, .images3{
+    height: 500px;
+    width: 80%;
+    margin: 50px 0 0 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url(/Hero-travel/Images/Group\ 39.png);
+    display: flex;
+    justify-content: end;
+    padding: 50px 50px 0 0;
+}
+.images2{
+    height: 500px;
+    width: 80%;
+    margin: 50px 0 0 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url(/Hero-travel/Images/Group\ 40.png);
+    padding: 50px 0 0 50px;
+}
+.img1-1{
+    height: 400px;
+    width: 600px;
+    background-image: linear-gradient(rgba(246, 244, 244, 0.8), rgba(246, 244, 244, 0.8));
+  border-radius: 10px;
+  padding: 50px 0 0 50px;
+}
+.img2-2{
+    height: 400px;
+    width: 600px;
+    background-image: linear-gradient(rgba(246, 244, 244, 0.8), rgba(246, 244, 244, 0.8));
+  border-radius: 10px;
+  padding: 50px 0 0 50px;
+}
+.img3-3{
+    height: 400px;
+    width: 600px;
+    background-image: linear-gradient(rgba(246, 244, 244, 0.8), rgba(246, 244, 244, 0.8));
+  border-radius: 10px;
+  padding: 50px 0 0 50px;
+}
+
+.logo-dis{
+    display: flex;
+    /* margin: 20px 0 0 50px; */
+    align-items: center;
+    gap: 10px;
+    
+}
+.logo-dis img{
+  margin-top: 0;
+  
+}
+.logo-dis p{
+    margin-top: 15px;
+    color: #5A5A5D;
+}
+
+.des-sec-p{
+    margin-right: 40px;
+   
+}
+
+.h3-dis{
+    font-size: 25px;
+    color: #FF5400;
+}
+.book-button{
+    height: 45px;
+    width: 130px;
+    background-color: #FF5400;
+    color: white;
+    font-size: 17px;
+    border-radius: 8px;
+    border: none;
+}
+.package{
+    height: 45px;
+    width: 200px;
+    background-color: #FF5400;
+    color: white;
+    font-size: 17px;
+    border-radius: 8px;
+    border: none;
+    margin: 50px 0 0 650px;
+}
+
+
+.per-place-sec{
+    display: flex;
+    width: 80%;
+    margin: 80px 0 0 10%;
+    
+}
+.perfect-text h1{
+   font-size: 40px;
+   margin-top: 0;
+}
+.perfect-text p{
+    color: #5A5A5D;
+    max-width: 600px;
+    margin-bottom: 30px;
+    
+}
+.perfect-text ul{
+    max-width: 500px;
+    margin-left: 0;
+    
+}
+.perfect-text ul li {
+    color: #5A5A5D;
+    margin-bottom: 20px;
+}
+.read-button{
+    height: 40px;
+   width: 130px;
+   background-color: #FF5400;
+   color: white;
+   border: none;
+   border-radius: 5px;
+}
+.place-img h2{
+   color: white;
+   text-align: center;
+    margin-top: 180px;
+    
+}
+
+.place-img{
+    background-image: url(/Hero-travel/Images/Group\ 40089.png);
+    height: 400px;
+    width: 600px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    margin-left: 20px;
+}
+
+/* deals and discount styles end */
+
+.container-news{
+    display: flex;
+    width: 80%;
+    margin: 50px 0 0 10%;
+}
+.newsletter{
+   height: 400px;
+   width: 450px;
+   border: 1px solid #FF5400;
+   padding: 30px 30px;
+   border-radius: 10px;
+} 
+
+input[type="email"], input[type="text"]{
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   padding: 20px;
+   background-color: rgba(19, 19, 24, 5%);
+   border: none;
+   border-radius: 5px;
+   margin-top: 20px;
+}
+
+
+.subscribe{
+    height: 40px;
+    width: 100%;
+    background-color: #FF5400;
+    border: none;
+    color: white;
+    font-size: 17px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+.img-container{
+    height: 400px;
+    width: 500px;
+    margin: 0 0 0 50px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+   
+.img-container img{
+    height: 400px;
+    width: 700px;
+    border-radius: 10px;
+   
+}
+.discount-com{
+    background-color: #ff5400;
+    padding: 20px 20px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    position: absolute;
+    bottom: 75px;
+    right: -193px;
+    border-radius: 15px;
+    transform: rotate(-30deg);
+    width: 350px;
+}
+.discount-com h2{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    margin-top: 5px;
+}
+.discount-com p{
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    margin-bottom: 0;
+}
+
+footer{
+    background-color: rgba(19, 19, 24, 5%);
+    margin-top: 100px;
+    padding: 100px 300px 100px 300px;
+}
+
+.logo-again{
+    display: flex;
+    justify-content: center;
+}
+.logo-again h1{
+    margin-top: 5px;
+  
+}
+.icons{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    font-size: 20px;
+}
+.logo-again img{
+    height: 50px;
+    width: 50px;
+    margin-right: 10px;
+}
+footer p{
+    text-align: center;
+}
